--- a/css/yo.css
+++ b/css/yo.css
@@ -1,102 +1,133 @@
-body {
-    /* Serif options */
-    /*font-family: "Times New Roman", Times, serif;*/
-    /*font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif    */
 
-    /*Sans Serif options */
-    /*font-family: "Helvetica", Arial, Freesans, clean, sans-serif;*/
-    font-family: Arial, Freesans, clean, sans-serif;
-    /*font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;*/
-    /*font-family: "Trebuchet MS", Helvetica, sans-serif;*/
-    /*font-family: Verdana, Geneva, sans-serif;*/
-    /*font-family: Tahoma, Geneva, sans-serif;*/
-    /*font-family: Baskerville, 'Times New Roman', Times, serif;*/
+BODY { font-family: DejaVu Serif, Bitstream Vera Serif, Georgia, serif; }
+TT, CODE { font-family: DejaVu Sans, Bitstream Vera Sans, Verdana, sans; }
+PRE { font-family: DejaVu Sans Mono, Bitstream Vera Sans Mono, Luxi Mono, Courier, monospace; }
 
+BODY { font-size: 10pt; line-height: 1.4; }
+#title { font-weight: bold; font-style: oblique; font-size: 16pt; }
+#subtitle { font-size: 11pt; }
+.entry DIV.title { font-family: DejaVu Serif Condensed, Bitstream Vera Serif,
+                   Georgia, serif;
+                   font-weight: bold; font-size: 13pt; line-height: 1; color: #222; }
+.entry .data { font-size: 8pt; line-height: 2.2; }
+.entry .body { line-height: 1.4; }
+TT, CODE, PRE { font-size: 9pt; }
+#right { font-size: 7.5pt; line-height: 1.3; }
+#right .title { font-weight: bold; }
+#copyright P { font-size: 5pt; white-space: pre; }
+#tweet-list { font-size: smaller; }
+EM, I { font-style: oblique; }
+BLOCKQUOTE.quote * { font-size: 9pt; }
+H2 { font-size: 11pt; }
 
-    padding:1em;
-    font-size: 12px;
-    font-weight:300;
-    line-height: 15px;
-    margin:3em;
-    max-width:80em;
-    background:#fefefe;
-    color:#333;
-}
+BODY { color: #111; }
+A { text-decoration: none; }
+A:link { color: #437291; }
+A:visited { color: #666; }
+A:hover, #right A:hover, #right .title A:hover { color: #e76f00; }
+#head A { color: #222; }
+#copyright { color: #888; }
 
-h1, h2, h3, h4, h5, h6 {
-    font-weight: bold;
-    margin: 1em 0px 5px 0px;
-}
+BODY { margin: 2em 4em; width: 50em; }
+.entry { width: 36em; }
+.entry .body P { text-align: justify; }
+TD { text-align: left; }
+#right { float: right; margin-left: 0em; width: 14em; }
+.nearby-arrow { width: 0em; float: right; }
 
-h1 {
-    color: #000;
-    font-size: 2em;
-}
+#head { margin: 4ex auto 6ex auto; }
+.entry { margin-top: 3ex; }
+P { margin: 1ex 0; text-indent: 0; }
+.entry .body > P + P { text-indent: 2em; }
+.entry .body > P { margin: 0 0; }
+.entry .body P.br, .entry .body P.titled { text-indent: 0; }
+.entry .body > P.titled { margin-top: 1.5ex; }
+.entry .body > P.question { margin-top: 1.5ex; }
+.entry .body > P.answer { margin-top: .5ex; }
+.entry .body > P.titled SPAN.title { font-weight: bold; padding-right: 1em; }
+.entry .body > P.br { margin-top: 1ex; }
+.entry .body H2 { margin-top: 2.5ex; margin-bottom: 1ex; }
 
-h2 {
-    font-size: 2em;
-}
+.entry .body .qa > P + P { text-indent: 2em; }
+.entry .body .qa > P + P.A { text-indent: 0; }
+.entry .body .qa > P { margin: 0 0; }
+.entry .body .qa > P.Q, .entry .body .qa > P.A { margin-top: .5ex; }
+.entry .body .qa { margin-top: 1.6ex; }
+.entry .body .qa > P SPAN { float: left; width: 2em; padding-right: 0 !important; }
 
-h3 {
-    font-size: 1.6em;
-}
+.entry .body { margin-top: 1ex; }
+.entry .foot { margin-top: 6ex; }
+.entry .comments { margin-top: 8ex; }
+.index .entry { margin-top: 3ex; }
+.index .hyphenate { text-align: justify; }
+#bio P:first-child { margin-top: 0px; }
+#bio P { margin: 1ex 0px; }
+#right DIV { margin-top: 3ex; }
+#right DIV:first-child { margin-top: 0ex; }
+#right #copyright { margin-top: 6ex; }
+BLOCKQUOTE, PRE { margin: 1.5ex 2em; }
+OL, UL { margin: 1ex 2em 1ex 0em; }
+LI { margin: 0ex 0ex; }
+UL LI { list-style-type: square; }
 
-h4 {
-    font-size: 1.3em;
-}
+#right { text-align: right; }
 
-h5 {
-    font-size: 1em;
-}
+A IMG { border-width: 0px; }
 
-h6 {
-    color: #777777;
-    background-color: inherit;
-    font-size: 1em;
-}
+#right UL { display: block; margin: 0px; padding: 0px; }
+#right LI { display: block; margin: .75ex 0px; padding: 0px; }
+#links LI { display: block; margin: .5ex 0px; padding: 0px; }
 
-hr {
-    height: 0.2em;
-    border: 0;
-    color: #CCCCCC;
-    background-color: #CCCCCC;
-}
+#tweets .title SPAN { font-weight: normal; font-size: smaller; }
+#tweets { display: none; }
+#tweets .age { font-size: smaller; }
+#tweets LI { margin: 1.25ex 0px; padding: 0px; }
 
-p, blockquote, ul, ol, dl, li, table, pre {
-    margin: 15px 0;
-}
+#recents { display: none; }
 
-code, pre {
-    border-radius: 3px;
-    background-color: #F8F8F8;
-    color: inherit;
-}
+#nav { float: right; }
+#nav A, #nav .invisible { color: white; }
+#nav A:hover { color: #eee; }
+#nav { font-size: 400%; }
+#nav-prev { padding-right: .25em; }
 
-code {
-    border: 1px solid #EAEAEA;
-    margin: 0 2px;
-    padding: 0 5px;
-}
+.dsq-trackback-url, #dsq-sort-by { display: none; }
+.comments h3 { display: none; font-weight: normal; font-size: 9pt; }
+#dsq-account-dropdown { display: none; }
+#dsq-subscribe { font-size: smaller; }
+#dsq-subscribe EM { text-decoration: none; }
+.dsq-font { font-size: 8pt; }
+.comments * { -moz-border-radius: 0 !important;
+              -moz-box-shadow: none !important;
+              clear: none !important; }
+.comments BR { display: block; margin-top: .5ex; }
+.dsq-textarea-background, .dsq-button, .dsq-button:hover
+  { background: none !important; }
+.dsq-button:hover { color: #e76f00 !important; }
+#dsq-content .dsq-comment { clear: none !important; }
+.dsq-comment-message { line-height: 1.4 !important; }
+#dsq-subscribe { padding-left: 56px; }
+.dsq-commenter-name { font-family: Bitstream Vera Serif, Georgia;
+                      font-weight: normal !important; }
+.dsq-comment-header { background-image: none !important;
+                      border: none !important;
+                      background-color: #fff !important;
+                      font-size: 11pt !important; }
+.dsq-comment-text { display: block !important;
+                    padding-left: 10px !important; }
+.dsq-comment-footer { padding-left: 10px !important; }
+.dsq-notice { background: inherit !important;
+              border: inherit !important;
+              font-style: oblique; font-size: 9pt !important;
+              padding: 0pt !important; padding-left: 96px !important;
+              margin-top: -11px !important;
+              margin-bottom: 32px !important;
+              }
+.dsq-clearfix:after { clear: none !important; }
+#dsq-pagination + .dsq-reply { margin-top: 4em !important; }
 
-pre {
-    border: 1px solid #CCCCCC;
-    line-height: 1.25em;
-    overflow: auto;
-    padding: 6px 10px;
-}
-
-pre > code {
-    border: 0;
-    margin: 0;
-    padding: 0;
-}
-
-a, a:visited {
-    color: #4183C4;
-    background-color: inherit;
-    text-decoration: none;
-}
-
-img {
-    max-width: 100%;
-}
+/* Utterly bizarre -- Need these to make dsq button images look right */
+#dsq-content #dsq-toolbar-dropdown .dsq-toolbar-icon, 
+  #dsq-content .dsq-toolbar-label,
+  .dsq-dislike-thread .dsq-toolbar-icon { float: none !important; }
+#dsq-comments { margin-top: 4em !important; }
