--- a/css/yo.css
+++ b/css/yo.css
@@ -5,7 +5,7 @@ body {
 
     /*Sans Serif options */
     /*font-family: "Helvetica", Arial, Freesans, clean, sans-serif;*/
-    font-family: Arial, Freesans, clean, sans-serif;
+    font-family: Lucida, Arial, Freesans, clean, sans-serif;
     /*font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;*/
     /*font-family: "Trebuchet MS", Helvetica, sans-serif;*/
     /*font-family: Verdana, Geneva, sans-serif;*/
