--- a/css/yo.css
+++ b/css/yo.css
@@ -1,12 +1,12 @@
 
-BODY { font-family: DejaVu Serif, Bitstream Vera Serif, Georgia, serif; }
-TT, CODE { font-family: DejaVu Sans, Bitstream Vera Sans, Verdana, sans; }
-PRE { font-family: DejaVu Sans Mono, Bitstream Vera Sans Mono, Luxi Mono, Courier, monospace; }
+BODY { font-family: Lucida, DejaVu Serif, Bitstream Vera Serif, Georgia, serif; }
+TT, CODE { font-family: Lucida, DejaVu Sans, Bitstream Vera Sans, Verdana, sans; }
+PRE { font-family: Lucida, DejaVu Sans Mono, Bitstream Vera Sans Mono, Luxi Mono, Courier, monospace; }
 
 BODY { font-size: 10pt; line-height: 1.4; }
 #title { font-weight: bold; font-style: oblique; font-size: 16pt; }
 #subtitle { font-size: 11pt; }
-.entry DIV.title { font-family: DejaVu Serif Condensed, Bitstream Vera Serif,
+.entry DIV.title { font-family: Lucida, DejaVu Serif Condensed, Bitstream Vera Serif,
                    Georgia, serif;
                    font-weight: bold; font-size: 13pt; line-height: 1; color: #222; }
 .entry .data { font-size: 8pt; line-height: 2.2; }
@@ -107,7 +107,7 @@ A IMG { border-width: 0px; }
 #dsq-content .dsq-comment { clear: none !important; }
 .dsq-comment-message { line-height: 1.4 !important; }
 #dsq-subscribe { padding-left: 56px; }
-.dsq-commenter-name { font-family: Bitstream Vera Serif, Georgia;
+.dsq-commenter-name { font-family: Lucida, Bitstream Vera Serif, Georgia;
                       font-weight: normal !important; }
 .dsq-comment-header { background-image: none !important;
                       border: none !important;
